# fb_project

./: Dockerfile  README.md  pyproject.toml
alembic/: README  env.py
alembic/versions/: 01_initial_structure.py  01_initial_structure1.py  02_add_new_field.py
app/: main.py
app/api/: activity_log.py  facebook_data.py  httpx_client.py  request_info.py  routers.py  utils.py  validators.py
app/api/endpoints/: __init__.py  activity_log.py
app/core/: base.py  config.py  database.py
app/crud/: __init__.py  activity_log.py  application.py  base.py  facebook_data.py  flow.py  pixel_token.py  request_info.py
app/models/: __init__.py  activity_log.py  facebook_data.py  request_info.py
app/schemas/: activity_log.py  facebook_data.py
infra/: docker-compose.yaml
infrastructure/: docker-compose.yaml
