[tool.poetry]
name = "fb_project"
version = "0.1.0"
description = ""
authors = ["Teijio <ridpfrep@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
